--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.proxela }}
+        key: ${{ secrets.PRIVATE_KEY }}
         port: 22
         script: |
           cd ~/home/test
