--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -23,9 +23,24 @@ jobs:
         key: ${{ secrets.PRIVATE_KEY }}
         port: 22
         script: |
-          cd ~/home/test
+          cd ~/home/project/proxela_nuit_info_2023
           git pull origin develop
-          git status
+          CONTAINER_NAME="dockerized-react"
+
+            # Check if the container is running
+            if [ "$(docker inspect -f '{{.State.Running}}' $CONTAINER_NAME 2>/dev/null)" == "true" ]; then
+                echo "Container $CONTAINER_NAME is running. Stopping it..."
+                docker stop $CONTAINER_NAME || true
+            else
+                echo "Container $CONTAINER_NAME is not running."
+            fi
+
+            # Build the Docker image
+            docker build . -t $CONTAINER_NAME
+
+            # Run the Docker container
+            docker run -p 80:80 -d $CONTAINER_NAME
+
         
 
      
