--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -23,7 +23,7 @@ jobs:
         key: ${{ secrets.PRIVATE_KEY }}
         port: 22
         script: |
-          cd ~/home/project/proxela_nuit_info_2023
+          cd /home/project/proxela_nuit_info_2023
           git pull origin develop
           CONTAINER_NAME="dockerized-react"
 
