--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -25,8 +25,8 @@ jobs:
         script: |
           cd /var/www/proxela_nuit_info_2023
           git pull origin develop
-          npm install
-          npm run build
+          yarn
+          yarn build
           cp ./dist/* /var/www/html/
           systemctl restart nginx
 
