--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -27,7 +27,7 @@ jobs:
           git pull origin develop
           yarn
           yarn build
-          cp -r ./dist/ /var/www/html/
+          cp -r ./dist /var/www/html/
           systemctl restart nginx
 
 
