Update build process to copy files from dist directory to /var/www/html

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -27,7 +27,8 @@ jobs:
           git pull origin develop
           yarn
           yarn build
-          cp -r ./dist /var/www/html/
+          cd dist
+          cp -r . /var/www/html
           systemctl restart nginx
 
 
