--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bradgarropy/use-countdown": "1.2.1",
     "@chakra-ui/react": "^2.4.1",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/open-sans": "^4.5.13",
@@ -20,12 +23,16 @@
     "i18next": "^22.0.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
+    "react-confetti": "6.0.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.1",
     "swiper": "^8.4.5",
+    "tsparticles": "^3.0.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
