--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-VITE_API_URL="https://www.proxela-nuit-info.com/api/api/v1/"
+VITE_API_URL="https://proxela-nuit-info.com/api/api/v1/"
  ESLINT_NO_DEV_ERRORS=true
