--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VITE_API_URL="https://www.proxela-nuit-info.com/api/v1/"
+VITE_API_URL="https://proxela-nuit-info.com/api/api/v1/"
  ESLINT_NO_DEV_ERRORS=true
  
